# seqan-std

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  all_view.hpp  chunk_by_view.hpp  chunk_view.hpp  concepts.hpp  enumerate_view.hpp  join_with_view.hpp  pair.hpp  to.hpp  tuple.hpp  zip_view.hpp
.github/workflows/: ci_license_check.yml  ci_linux.yml  ci_macos.yml  ci_readme.yml  ci_win.yml
detail/: adaptor_base.hpp  adaptor_for_view_without_args.hpp  adaptor_from_functor.hpp  compiler_definitions.hpp  exposition_only.hpp  movable_box.hpp  non_propagating_cache.hpp
include/seqan-std/: all_view.hpp  chunk_by_view.hpp  chunk_view.hpp  concepts.hpp  enumerate_view.hpp  join_with_view.hpp  to.hpp  tuple.hpp  zip_view.hpp
include/seqan-std/detail/: adaptor_for_view_without_args.hpp  adaptor_from_functor.hpp
test/: CMakeLists.txt  check_file_set.cmake  generate_header_source.cmake
test/CPM/: CMakeLists.txt  example.cpp  example.expected
